# opensprogskole-assisted

./: .gitignore  CHANGELOG  README.md  meson.build  moe.ekusu.sprogskole.json  pixiewood.xml
.github/workflows/: ci.yml
android/java/moe/ekusu/sprogskole/: SyncInit.java  SyncWorker.java
android/res/values/: strings.xml
android/res/values-da/: strings.xml
android/res/values-ru/: strings.xml
android/res/values-uk/: strings.xml
data/: meson.build  moe.ekusu.sprogskole.desktop.in  moe.ekusu.sprogskole.gschema.xml  moe.ekusu.sprogskole.metainfo.xml.in  moe.ekusu.sprogskole.service.in  opensprogskole.gresource.xml  opensprogskole.gresource.xml.in  style.css
data/icons/: meson.build
data/icons/hicolor/scalable/apps/: moe_ekusu_sprogskole.xml
data/icons/hicolor/symbolic/apps/: moe_ekusu_sprogskole_symbolic.xml
data/ui/: absence-dialog.blp  absence-page.blp  agenda.blp  calendar-day.blp  calendar.blp  chart.blp  dashboard-add-dialog.blp  dashboard-view.blp  dashboard-widget.blp  day-lessons.blp  edit-profile-page.blp  error-details-dialog.blp  grades-page.blp  grades.blp  lesson-dialog.blp  links-page.blp  loading-state.blp  main-view.blp  onboarding-view.blp  overview-page.blp  preferences-dialog.blp  profile-page.blp  reason-dialog.blp  schedule-view.blp  school-picker.blp  window.blp
po/: LINGUAS  POTFILES.in  da.po  install-runtime-mo.py  meson.build  opensprogskole.pot  ru.po  uk.po
scripts/: metainfo-add-ns.py
src/: application.vala  config.vapi  gvdb-glue.c  gvdb-glue.h  gvdb-glue.vapi  main.vala  meson.build  util.vala
src/android/: android-glue.c  android-glue.h  android-glue.vapi  sync-jni.c
src/models/: absence-item.vala  absence-settings.vala  absence-summary.vala  call-in-sick-settings.vala  entity.vala  future-absence-item.vala  grade.vala  link-item.vala  school.vala  timetable-item.vala  user-info-item.vala  user-info-settings.vala
src/services/: accounts.vala  avatar-cache.vala  background-portal.vala  connectivity.vala  dashboard-registry.vala  dashboard-widget.vala  demo-provider.vala  error-reporter.vala  json-cache.vala  localization.vala  login-method.vala  ludus-client.vala  ludus-config.vala  ludus-endpoints.vala  ludus-oidc.vala  ludus-provider.vala  nav-section.vala  news-notifier.vala  news-tracker.vala  oidc-callback-router.vala  provider-family.vala  school-config.vala  school-provider.vala  schools.vala  secret-store.vala  session-controller.vala  session.vala  storage.vala  sync-runner.vala  ums-client.vala  ums-endpoints.vala  ums-provider.vala
src/store/: timetable-store.vala
src/views/: absence-page.vala  dashboard-add-dialog.vala  dashboard-view.vala  edit-profile-page.vala  grades-page.vala  links-page.vala  main-view.vala  onboarding-view.vala  overview-page.vala  preferences-dialog.vala  profile-page.vala  schedule-view.vala  school-picker.vala
src/widgets/: absence-dialog.vala  agenda.vala  calendar-day.vala  calendar.vala  chart.vala  day-lessons.vala  error-details-dialog.vala  grades.vala  lesson-dialog.vala  loading-state.vala  nav-bar.vala  reason-dialog.vala  styles.vala  tile-attendance-wave.vala  tile-attendance.vala  tile-grades.vala  tile-stats.vala  tile-up-next.vala  window.vala
subprojects/: glib-networking.wrap  gvdb.wrap  proxy-libintl.wrap
subprojects/packagefiles/: glib-networking_no_post_install.patch
tests/: meson.build  test-error-details.vala
